--- a/src/KogaseEngine.Api/KogaseEngine.Api.csproj
+++ b/src/KogaseEngine.Api/KogaseEngine.Api.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2" />
+    <ProjectReference Include="..\KogaseEngine.Core\KogaseEngine.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\KogaseEngine.Core\KogaseEngine.Core.csproj" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" />
+    <PackageReference Include="Swashbuckle.AspNetCore" />
   </ItemGroup>
 
 </Project>
