--- a/src/KogaseEngine.Api/appsettings.json
+++ b/src/KogaseEngine.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=kogaseengine;Username=postgres;Password=postgres"
+  }
+} 
