feat: Auth module

--- a/src/KogaseEngine.Api/appsettings.json
+++ b/src/KogaseEngine.Api/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=kogaseengine;Username=postgres;Password=postgres"
+  },
+  "JwtSettings": {
+    "Secret": "your-256-bit-secret-key-here-make-it-long-and-secure",
+    "TokenExpirationMinutes": 60,
+    "RefreshTokenExpirationDays": 7
   }
 } 
