--- a/src/KogaseEngine.Api/KogaseEngine.Api.csproj
+++ b/src/KogaseEngine.Api/KogaseEngine.Api.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer"/>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design"/>
         <PackageReference Include="Swashbuckle.AspNetCore"/>
