--- a/src/KogaseEngine.Core/KogaseEngine.Core.csproj
+++ b/src/KogaseEngine.Core/KogaseEngine.Core.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
         <PackageReference Include="FluentValidation"/>
         <PackageReference Include="FluentValidation.AspNetCore"/>
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" />
     </ItemGroup>
 
 </Project>
